Se reparan bugs surgidos esta mañana y otros nuevos surgidos al arreglar estos; se sigue dando estilo y modificando estructura. Queda el color e imágenes en el estilo para darle visibilidad a la página e intentar el class EnterInBaseDate con todas las que ahora son funciones de entrada a la DB

--- a/cristian_coin/static/css/cris_style.css
+++ b/cristian_coin/static/css/cris_style.css
@@ -8,7 +8,7 @@ header, footer {
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-rows: 200px 100px 1fr auto;
+    grid-template-rows: 200px 92px 1fr auto;
     margin: 0;
 }
 
@@ -25,3 +25,15 @@ body {
     position: absolute; 
     z-index: 5px;
  }
+
+#info_list {
+    margin-top: 20px;
+}
+
+#section_nav #section_subpages {
+    margin-top: 20px;
+}
+
+#info_list_section {
+    margin-bottom: 20px;
+}
